--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,13 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    
+    - name: Take ownership of the checkout directory (Git CVE-2022-24765)
+      run: chown --recursive --reference=/ .
+
+    - name: Allow for file ownership conflicts with Docker and GitHub Actions
+      run: git config --global --add safe.directory '*'
+
     - name: LaTeX compilation
       run:
         TERM=xterm make ${{ matrix.document }}
@@ -45,6 +52,7 @@ jobs:
     - uses: actions/checkout@v4
       with:
         ref: gh-pages
+  
     - name: Download organization
       uses: actions/download-artifact@v4
       with:
